# xmpd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install.sh  pyproject.toml  todo.md  uninstall.sh  xmpd.service
.claude/: settings.json
docs/: MIGRATION.md  STREAM_PROXY.md  i3blocks-integration.md  version-management.md
docs/bugs/: 001-auth-failure-color-override.md
examples/: config.yaml  i3blocks.conf
scripts/: bump_version.sh  check_version_sync.sh  migrate-config.py
tests/: __init__.py  test_airplay_bridge_track_store_reader.py  test_auto_auth_daemon.py  test_config.py  test_cookie_extract.py  test_daemon.py  test_history_config.py  test_history_integration.py  test_history_reporter.py  test_icy_proxy.py  test_like_indicator.py  test_like_toggle.py  test_migrate_config.py  test_mpd_client.py  test_notify.py  test_playlist_patcher.py  test_providers_base.py  test_providers_registry.py  test_providers_tidal.py  test_providers_tidal_scaffold.py  test_providers_ytmusic.py  test_rating.py  test_search_actions.py  test_search_fzf_format.py  test_search_json.py  test_security_fixes.py  test_stream_proxy.py  test_stream_resolver.py  test_sync_engine.py  test_tidal_oauth.py  test_tidal_play_report.py  test_track_store.py  test_track_store_migration.py  test_xmpctl.py  test_xmpd_search_modes.py  test_xmpd_status.py  test_xmpd_status_cli.py  test_xmpd_status_idle.py  test_ytmusic.py  test_ytmusic_history.py  (+1 more)
xmpd/: __init__.py  __main__.py  config.py  cookie_extract.py  daemon.py  exceptions.py  history_reporter.py  icy_proxy.py  mpd_client.py  notify.py  playlist_patcher.py  proxy_url.py  rating.py  stream_proxy.py  sync_engine.py  track_store.py  xspf_generator.py
(+168 files in other folders)
